@@ -49,13 +49,12 @@ POSSIBILITY OF SUCH DAMAGE.
         <version.swagger-ui>5.18.3</version.swagger-ui>
         <!--<version.microprofile-config>3.1</version.microprofile-config>-->
         <!--<version.smallrye-config>3.5.0</version.smallrye-config>-->
-        <!--<version.mockito>5.5.0</version.mockito>-->
+        <version.mockito>5.16.0</version.mockito>
         <version.junit>5.11.4</version.junit>
         <versin.slf4j>2.0.17</versin.slf4j>
         <version.eclipselink>4.0.3</version.eclipselink>
         <version.ulidj>1.0.4</version.ulidj>
         <version.assertj>3.27.3</version.assertj>
-        <!--<version.mockito>5.2.0</version.mockito>-->
         <version.hibernate-validator>8.0.1.Final</version.hibernate-validator>
         <version.expressly>5.0.0</version.expressly>
         <version.yasson>3.0.4</version.yasson>
@@ -257,18 +256,22 @@ POSSIBILITY OF SUCH DAMAGE.
             <artifactId>junit-jupiter-params</artifactId>
             <scope>test</scope>
         </dependency>-->
-        <!--        <dependency>
+
+        <!-- License: MIT -->
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>${version.mockito}</version>
             <scope>test</scope>
-        </dependency>-->
-        <!--        <dependency>
+        </dependency>
+
+        <!-- License: MIT -->
+        <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
+            <artifactId>mockito-core</artifactId>
             <version>${version.mockito}</version>
             <scope>test</scope>
-        </dependency>-->
+        </dependency>
         <!--        <dependency>
             <groupId>io.smallrye.config</groupId>
             <artifactId>smallrye-config</artifactId>
@@ -463,7 +466,7 @@ POSSIBILITY OF SUCH DAMAGE.
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>@{jacocoArgLine} -Dfile.encoding=${project.build.sourceEncoding}</argLine>
+                    <argLine>"@{jacocoArgLine}" "-Dfile.encoding=${project.build.sourceEncoding}" "-javaagent:${settings.localRepository}/org/mockito/mockito-core/${version.mockito}/mockito-core-${version.mockito}.jar" "-XX:+EnableDynamicAgentLoading" "-Xshare:off"</argLine>
                 </configuration>
             </plugin>
         </plugins>
